fixing nav / content overlap on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,10 @@ header h1 {
   display: none;
 }
 
+header ul {
+	height: auto;
+}
+
 header p {
   margin-top: 1em;
 }
